--- a/Hello Word/Agenda.html
+++ b/Hello Word/Agenda.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Agenda</title>
     <link rel="stylesheet" href="Estillo agenda.css">
 </head>
 <body>
-
     <header>
+        </div>
         <div class= "content">
             <div class="menu container">
-                <img src="IMG/Imagen de WhatsApp 2024-07-15 a las 08.22.54_893dfe0f.jpg" class="menu-tr"  alt=""> 
+                <img src="IMG/Logo.webp" class="menu-tr"  alt=""> 
                 <input type="checkbox" id="menu" />
                 <label for="menu"> 
                     <img src="IMG/menu.png" class="menu-icono"  alt="">
@@ -25,6 +26,28 @@
             </div>
         </div>
     </header>
+    <div class="header-content container">
+        <h1>Geko-Tec</h1>
+        <p>
+            Una herramienta funcional que ayuda a programar tu tiempo para evitar que se te pasen los eventos más importantes de tu vida es fundamental en el mundo actual, donde la eficiencia y la organización son clave para el éxito personal y profesional. Esta página, diseñada con una interfaz amigable y fácil de usar, te permite gestionar tus tareas diarias de manera eficaz, asignando fechas específicas para cada una de ellas y priorizando las más urgentes.</a>
+        </p>
 
+    <section class="laimagen">
+
+        <img src="IMG/web-development-8734249_1280.png" alt="">
+    
+        <div class="Mujer-content container">
+
+            <h2> Nunca pierdas una tarea más y se tu yo más productivo</h2>
+            <p class="txt-p">
+                El calendario te ofrece una vista general de tu agenda, mostrando todas tus citas, reuniones y eventos importantes. Puedes programar recordatorios para recibir notificaciones antes de cada compromiso, asegurándote de estar siempre preparado y puntual. Además, puedes establecer metas y plazos, dividiendo proyectos grandes en tareas más pequeñas y manejables.
+
+                Por otro lado, el to-do list es una herramienta versátil que te permite anotar todas las tareas que necesitas realizar. Puedes agruparlas por categorías, asignarles prioridades y marcarlas como completadas a medida que avanzas. Esta funcionalidad te brinda una sensación de logro y te motiva a seguir adelante, ya que puedes ver tu progreso de manera tangible.
+
+
+            </p>
+
+        </div>
+    </section>
 </body>
 </html
