--- a/Hello Word/Agenda.html
+++ b/Hello Word/Agenda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Agenda</title>
-    <link rel="stylesheet" href="Estillo agenda.css">
+    <link rel="stylesheet" href="Agenda.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
                 <nav class="navbar">
                     <ul>
                         <li><a href=http://127.0.0.1:5500/To-do.html>Crear Tareas y Tareas</a></li>
-                        <li><a href="http://127.0.0.1:5500/index%20calendario.html">Calendario</a></li>
+                        <li><a href="http://127.0.0.1:5500/calendario.html">Calendario</a></li>
                     </ul>
                 </nav>
             </div>
